--- a/force-app/main/default/lwc/bearList/bearList.html
+++ b/force-app/main/default/lwc/bearList/bearList.html
@@ -6,27 +6,10 @@
 				<lightning-input type="search" onchange={handleSearchTermChange} variant="label-hidden"
 					class="slds-m-bottom_small" label="Search" placeholder="Search for bears" value={searchTerm}>
 				</lightning-input>
-				<lightning-layout multiple-rows="true" pull-to-boundary="small">
+				<lightning-layout multiple-rows="true" pull-to-boundary="small" onbearview={handleBearView}>
 					<template for:each={bears.data} for:item="bear">
 						<lightning-layout-item key={bear.Id} size="3" class="slds-p-around_x-small">
-							<!-- Start bear tile -->
-							<lightning-card title={bear.Name} class="bear-tile">
-								<div class="slds-p-horizontal_small">
-									<div class="slds-media">
-										<div class="slds-media__figure">
-											<img src={appResources.bearSilhouette} alt="Bear profile"
-												class="bear-silhouette" />
-										</div>
-										<div class="slds-media__body">
-											<p class="slds-m-bottom_xx-small">{bear.Sex__c}</p>
-											<p class="slds-m-bottom_xx-small">{bear.Age__c} years old</p>
-											<p class="slds-m-bottom_xx-small">{bear.Height__c} cm</p>
-											<p class="slds-m-bottom_xx-small">{bear.Weight__c} Kg</p>
-										</div>
-									</div>
-								</div>
-							</lightning-card>
-							<!-- End bear tile -->
+							<c-bear-tile bear={bear}></c-bear-tile>
 						</lightning-layout-item>
 					</template>
 				</lightning-layout>
